syntax = "proto3";
// ./ 代表在当前目录生成go文件   userinfo 代表包名
option go_package = "./greeter";

service Greeter{
  rpc SayHello(HelloReq) returns (HelloRes);
}
message HelloReq{
 string name=1;
}
message HelloRes{
 string message=1;
}
// protoc --go_out=plugins=grpc:./ *.proto