syntax = "proto3";

package hello;
option go_package="./;pbaaa";
service HelloService {
  rpc Hello(Request) returns(Response);
}
message Request {
  string value = 1;
}
message Response {
  string value = 1;
}